# pasla

./: .gitattributes  .gitignore  .pasla.example  AGENTS.md  README.md  pasla  pyproject.toml
.github/workflows/: ci.yml
tests/: conftest.py  test_integration.py  test_platform.py  test_unit.py
